fix(Select): prevent chevron from overlapping other open popovers

--- a/src/DropdownTrigger/index.scss
+++ b/src/DropdownTrigger/index.scss
@@ -45,7 +45,15 @@
   right: var(--space-s);
   top: 50%;
   transform: translateY(-50%);
-  z-index: 999; /* appear above popovers per design */
+
+  // only overlap popovers if in an open state
+  &.narmi-icon-chevron-up {
+    z-index: 4;
+  }
+
+  &.narmi-icon-chevron-down {
+    z-index: 1;
+  }
 }
 
 .nds-dropdownTrigger-error {
